<resources>
    <string name="app_name">BatteryCapacity</string>
    <string name="capacity_label">Capacity :</string>
    <string name="capacity_derived_unit">mAh</string>
    <string name="reset">Reset</string>
    <string name="enter_period">Enter period</string>
    <string name="set">Set</string>
    <string name="title_activity_metering_results">MeteringResultsActivity</string>
    <string name="sum_of_powers">sum of powers</string>
    <string name="average_voltage">avg voltage</string>
    <string name="start_level">start</string>
    <string name="finish_level">finish</string>
    <string name="total_power">power</string>
    <string name="capacity">capacity</string>
</resources>
