<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MeteringResultsActivity">

    <ScrollView
        android:id="@+id/history_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/capacity_label"
        android:layout_marginTop="18dp">

        <GridLayout
            android:id="@+id/metering_results_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:columnCount="5">

            <TextView
                android:layout_gravity="fill"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/total_power" />

            <TextView
                android:layout_gravity="fill"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/average_voltage" />

            <TextView
                android:layout_gravity="fill"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/start_level" />

            <TextView
                android:layout_gravity="fill"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/finish_level" />

            <TextView
                android:layout_gravity="fill"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/capacity" />
        </GridLayout>
    </ScrollView>
</RelativeLayout>